// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders image with default values and image url 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt=""
      role="img"
      src="/photo.png/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"/photo.png/@@images/image/listing\\"
                srcset=\\"/photo.png/@@images/image/large 768w, /photo.png/@@images/image/preview 400w, /photo.png/@@images/image/mini 200w, /photo.png/@@images/image/thumb 128w, /photo.png/@@images/image/tile 64w, /photo.png/@@images/image/icon 32w, /photo.png/@@images/image/listing 16w\\"
                alt=\\"\\"
                class=\\"\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with external url 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt="External picsum photo"
      role="img"
      src="https://picsum.photos/200/300"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"https://picsum.photos/200/300\\"
                undefined
                alt=\\"External picsum photo\\"
                class=\\"\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and floated prop 1`] = `
Array [
  <picture
    className="volto-image floated right"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="img"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and opt props 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and original 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="presentation"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w, /test-images/@@images/image 1920w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with plone image object and size prop 1`] = `
Array [
  <picture
    className="volto-image medium"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="img"
      src="http://localhost:8080/Plone/test-images/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"http://localhost:8080/Plone/test-images/@@images/image/listing\\"
                srcset=\\"/test-images/@@images/image/listing 16w, /test-images/@@images/image/icon 32w, /test-images/@@images/image/tile 64w, /test-images/@@images/image/thumb 128w, /test-images/@@images/image/mini 200w, /test-images/@@images/image/preview 400w, /test-images/@@images/image/large 768w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"img\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;

exports[`Image renders image with props and image url 1`] = `
Array [
  <picture
    className="volto-image"
  >
    <img
      alt="Photo"
      className="photo-image"
      role="presentation"
      src="/photo.png/@@images/image/listing"
    />
  </picture>,
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "
              <img
                src=\\"/photo.png/@@images/image/listing\\"
                srcset=\\"/photo.png/@@images/image/large 768w, /photo.png/@@images/image/preview 400w, /photo.png/@@images/image/mini 200w, /photo.png/@@images/image/thumb 128w, /photo.png/@@images/image/tile 64w, /photo.png/@@images/image/icon 32w, /photo.png/@@images/image/listing 16w\\"
                alt=\\"Photo\\"
                class=\\"photo-image\\"
                role=\\"presentation\\"
                loading=\\"lazy\\"
                style=\\"width: 100%; object-fit: cover;\\"
            ",
      }
    }
  />,
]
`;
